--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,3 +1,15 @@
-h1 {
+/* h1 {
   background-color: red;
 }
+
+.nav {
+  background-color: red;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 1440px;
+}
+ */
