--- a/website/src/App.css
+++ b/website/src/App.css
@@ -13,3 +13,23 @@ body {
   max-width: 1440px;
 }
  */
+
+
+ .Nav-list{
+  background-color: red;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 2em;
+  border-bottom: 4px solid gold;
+ }
+ .Nav-list button {
+  background-color: #202020;
+  color: white;
+  width: 100px;
+  height: 50px;
+  border: none;
+  border-radius: 10px;
+
+
+ }
